--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 </html><!--
 
-Follow me onee
+Follow me one
 Dribbble: https://dribbble.com/supahfunk
 Twitter: https://twitter.com/supahfunk
 Codepen: https://codepen.io/supah/
