--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>teste</title>
-   <link rel="stylesheet" href="./style.css">
+   <title>Mota hospitalar</title>
+   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
-   
+   <header>
+      <h1>Título da página</h1>
+      <h2>Subtítulo da página</h2>
+ </header>
 </body>
-</html><!--
-
-Follow me one
-Dribbble: https://dribbble.com/supahfunk
-Twitter: https://twitter.com/supahfunk
-Codepen: https://codepen.io/supah/
-
--->
-<svg class="spinner" viewBox="0 0 50 50">
-    <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-  </svg>
+</html>
